hotfixes: BEM structure refined for buttons

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="profile__info">
         <h1 class="profile__info-title">Жак-Ив Кусто</h1>
         <p class="profile__info-text">Исследователь океана</p>
-        <button class="button button__edit profile__edit"></button>
+        <button class="button profile__edit"></button>
       </div>
-      <button class="button button__add profile__add"></button>
+      <button class="button profile__add"></button>
     </section>
 
     <section>
@@ -31,7 +31,7 @@
                alt="Старая постройка с заросшим фасадом на фоне подножья горы">
           <div class="card__text">
             <h2 class="card__title">Карачаевск</h2>
-            <button class="button button__like card__like"></button>
+            <button class="button card__like"></button>
           </div>
         </li>
         <li class="card">
@@ -39,7 +39,7 @@
                alt="Равнинная местность с туманным силуэтом гор на горизонте">
           <div class="card__text">
             <h2 class="card__title">Гора Эльбрус</h2>
-            <button class="button button__like card__like"></button>
+            <button class="button card__like"></button>
           </div>
         </li>
         <li class="card">
@@ -47,7 +47,7 @@
                alt="Лесистые склоны холмов с заснеженным пиком горы на заднем плане">
           <div class="card__text">
             <h2 class="card__title">Домбай</h2>
-            <button class="button button__like card__like"></button>
+            <button class="button card__like"></button>
           </div>
         </li>
         <li class="card">
@@ -55,7 +55,7 @@
                alt="Старая постройка с заросшим фасадом на фоне подножья горы">
           <div class="card__text">
             <h2 class="card__title">Гора Эльбрус</h2>
-            <button class="button button__like card__like"></button>
+            <button class="button card__like"></button>
           </div>
         </li>
         <li class="card">
@@ -63,7 +63,7 @@
                alt="Равнинная местность с туманным силуэтом гор на горизонте">
           <div class="card__text">
             <h2 class="card__title">Домбай</h2>
-            <button class="button button__like card__like"></button>
+            <button class="button card__like"></button>
           </div>
         </li>
         <li class="card">
@@ -71,7 +71,7 @@
                alt="Лесистые склоны холмов с заснеженным пиком горы на заднем плане">
           <div class="card__text">
             <h2 class="card__title">Карачаево-Черкесия</h2>
-            <button class="button button__like card__like"></button>
+            <button class="button card__like"></button>
           </div>
         </li>
       </ul>
@@ -89,7 +89,7 @@
         <input class="pop-up__input" id="text" type="text" name="profile-text">
         <input class="button pop-up__submit" type="submit" value="Сохранить">
       </form>
-      <button class="button button__close pop-up__close"></button>
+      <button class="button pop-up__close"></button>
     </div>
   </div>
   
