hotfixes: absolute position fixes of edit button and like button. README.md link to GitHub Pages added

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 
     <section class="profile">
       <img class="profile__avatar" src="images/Avatar.jpg" alt="Фотография пользователя">
-      <div class="profile__info">
-        <h1 class="profile__info-title">Жак-Ив Кусто</h1>
-        <p class="profile__info-text">Исследователь океана</p>
+      <div class="profile__wrapper">
+        <div class="profile__info">
+          <h1 class="profile__info-title">Жак-Ив Кусто</h1>
+          <p class="profile__info-text">Исследователь океана</p>
+        </div>
         <button class="button profile__edit"></button>
       </div>
       <button class="button profile__add"></button>
