--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="pages/index.css">
   <title>Проект Место</title>
 </head>
 <body class="page">
+
   <header class="header">
     <img class="header__logo" src="images/header_logo_theme_dark.svg" alt="МЕСТО">
   </header>
+  
   <main class="content">
 
     <section class="profile">
@@ -21,9 +23,9 @@
           <h1 class="profile__info-title">Жак-Ив Кусто</h1>
           <p class="profile__info-text">Исследователь океана</p>
         </div>
-        <button class="button profile__edit"></button>
+        <button class="button profile__edit" type="button"></button>
       </div>
-      <button class="button profile__add"></button>
+      <button class="button profile__add" type="button"></button>
     </section>
 
     <section>
@@ -33,7 +35,7 @@
                alt="Старая постройка с заросшим фасадом на фоне подножья горы">
           <div class="card__text">
             <h2 class="card__title">Карачаевск</h2>
-            <button class="button card__like"></button>
+            <button class="button card__like" type="button"></button>
           </div>
         </li>
         <li class="card">
@@ -41,7 +43,7 @@
                alt="Равнинная местность с туманным силуэтом гор на горизонте">
           <div class="card__text">
             <h2 class="card__title">Гора Эльбрус</h2>
-            <button class="button card__like"></button>
+            <button class="button card__like" type="button"></button>
           </div>
         </li>
         <li class="card">
@@ -49,7 +51,7 @@
                alt="Лесистые склоны холмов с заснеженным пиком горы на заднем плане">
           <div class="card__text">
             <h2 class="card__title">Домбай</h2>
-            <button class="button card__like"></button>
+            <button class="button card__like" type="button"></button>
           </div>
         </li>
         <li class="card">
@@ -57,7 +59,7 @@
                alt="Старая постройка с заросшим фасадом на фоне подножья горы">
           <div class="card__text">
             <h2 class="card__title">Гора Эльбрус</h2>
-            <button class="button card__like"></button>
+            <button class="button card__like" type="button"></button>
           </div>
         </li>
         <li class="card">
@@ -65,7 +67,7 @@
                alt="Равнинная местность с туманным силуэтом гор на горизонте">
           <div class="card__text">
             <h2 class="card__title">Домбай</h2>
-            <button class="button card__like"></button>
+            <button class="button card__like" type="button"></button>
           </div>
         </li>
         <li class="card">
@@ -73,28 +75,29 @@
                alt="Лесистые склоны холмов с заснеженным пиком горы на заднем плане">
           <div class="card__text">
             <h2 class="card__title">Карачаево-Черкесия</h2>
-            <button class="button card__like"></button>
+            <button class="button card__like" type="button"></button>
           </div>
         </li>
       </ul>
     </section>
   </main>
+  
   <footer class="footer">
-    <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
+    <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
   </footer>
   
   <div class="pop-up">
     <div class="pop-up__window">
       <h2 class="pop-up__title">Редактировать профиль</h2>
-      <form class="pop-up__form">
-        <input class="pop-up__input" id="name" type="text" name="profile-name">
-        <input class="pop-up__input" id="text" type="text" name="profile-text">
+      <form class="pop-up__form" name="edit-profile">
+        <input class="pop-up__input pop-up__input_profile_name" type="text" name="profile-name">
+        <input class="pop-up__input pop-up__input_profile_job" type="text" name="profile-text">
         <input class="button pop-up__submit" type="submit" value="Сохранить">
       </form>
-      <button class="button pop-up__close"></button>
+      <button class="button pop-up__close" type="button"></button>
     </div>
   </div>
   
-<script src="src/script.js"></script>
+<script src="scripts/script.js"></script>
 </body>
 </html>
