--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="pages/index.css">
+  <link rel="icon" href="images/favicon.ico">
   <title>Проект Место</title>
 </head>
 <body class="page">
