--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="pop-up pop-up_new-card">
     <div class="pop-up__window">
       <h2 class="pop-up__title">Новое место</h2>
-      <form class="pop-up_card-form" name="edit-profile">
+      <form class="pop-up__card-form" name="edit-profile">
         <input class="pop-up__input pop-up__input_card_place" type="text" name="profile-name" placeholder="Название">
         <input class="pop-up__input pop-up__input_card_image" type="url" name="profile-text"
                placeholder="Ссылка на картинку">
