hotfixes after first review: js script corrected, cursor ponter added for each interactive element

--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
     <div class="pop-up__window">
       <h2 class="pop-up__title">Новое место</h2>
       <form class="pop-up__card-form" name="edit-profile">
-        <input class="pop-up__input pop-up__input_card_place" type="text" name="profile-name" placeholder="Название">
+        <input class="pop-up__input pop-up__input_card_place" type="text" name="profile-name"
+               placeholder="Название" required>
         <input class="pop-up__input pop-up__input_card_image" type="url" name="profile-text"
-               placeholder="Ссылка на картинку">
+               placeholder="Ссылка на картинку" required>
         <input class="button pop-up__submit" type="submit" value="Создать">
       </form>
       <button class="button pop-up__close pop-up__close-card" type="button"></button>
