--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="pop-up pop-up_edit-profile">
     <div class="pop-up__window">
       <h2 class="pop-up__title">Редактировать профиль</h2>
-      <form class="pop-up__form pop-up__edit-profile" name="edit-profile">
+      <form class="pop-up__form pop-up__edit-profile" name="edit-profile" novalidate>
         <input class="pop-up__input pop-up__input_profile_name" type="text" name="profile-name" minlength="2"
                maxlength="40" required>
         <span class="pop-up__input-error profile-name-error"></span>
@@ -59,7 +59,7 @@
   <div class="pop-up pop-up_new-card">
     <div class="pop-up__window">
       <h2 class="pop-up__title">Новое место</h2>
-      <form class="pop-up__form pop-up__card-form" name="add-card">
+      <form class="pop-up__form pop-up__card-form" name="add-card" novalidate>
         <input class="pop-up__input pop-up__input_card_place" type="text" name="card-title"
                placeholder="Название" minlength="2" maxlength="30" required>
         <span class="pop-up__input-error card-title-error"></span>
