--- a/index.html
+++ b/index.html
@@ -90,8 +90,6 @@
       </div>
     </li>
   </template>
-  
-  <script src="scripts/script.js"></script>
-  <script src="scripts/validate.js"></script>
+  <script  type="module" src="scripts/index.js"></script>
 </body>
 </html>
